--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@ border: 1px solid #666;}
   width: 90px;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
-  background-color: #303131;
-  margin: -150px;
+  background-color: #f8f9fa;
+  margin: -17px;
   border: 1px solid #666;
   
 
@@ -43,8 +43,11 @@ border: 1px solid #666;}
 
 .signInButton {
   height: 35px;
-  width: 100px;
+  width: 95px;
   border-radius: 20px;
+  border-color: blue;
+  color: blue;
+  background-color: white;
   
 }
 
@@ -56,18 +59,20 @@ border: 1px solid #666;}
 }
 
 .sidebar {
-  width: 20%;
+  width: 30%;
   
 }
 
 .sidebar button {
   display: block;
-  height: 40px;
-  width: 98%;
+  height: 45px;
+  width: 100%;
   background-color: rgb(0, 0, 0);
   border: none;
   border-radius: 5px;
   margin: 1px;
+  text-align: start;
+
 }
 
 .main {
@@ -75,6 +80,11 @@ border: 1px solid #666;}
   flex-wrap: wrap;
   justify-content: space-evenly;
   width: 100%;
+}
+
+.icon {
+  margin-left: 30px;
+  margin-right: 20px;
 }
 
 
@@ -88,14 +98,23 @@ border: 1px solid #666;}
 
 .card-body {
   display: flex;
+  margin: 5px;
 }
 
 .card-text p {
   margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
-}
+  text-wrap: wrap;
 
+}
+.title {
+  font-weight: bold;
+}
+.faded {
+  font-size: 75%;
+  color: #666;
+}
 
 .thumbnail {
   height: 175px;
@@ -109,10 +128,17 @@ border: 1px solid #666;}
   border: 1px solid black;
   margin: 5px;
 }
+.channelText p {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-wrap: wrap;
+}
 
 
 .VideoPage {
   display: flex;
+  justify-content: center;
 }
 
 .VideoItem {
@@ -146,24 +172,30 @@ border: 1px solid #666;}
   border-radius: 10px;
   padding: 5px;
 }
-.title {
-  font-weight: bold;
-}
-
-.faded {
-  font-size: 75%;
-  color: #666;
-}
-
 .subscribe-button {
   background-color: black;
   color: white;
   font-weight: 700;
-  height: 50px;
-  width: 100px;
+  height: 35px;
+  width: 90px;
   border-radius: 25px;
   margin: 10px;
+  cursor: pointer;
 }
+
+.unsubscribe-button {
+  background-color: #948080; 
+  color: black;
+  font-weight: 700;
+  height: 35px;
+  width: 110px;
+  border-radius: 25px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+
+
 .pill {
   display: flex;
   align-items: center;
@@ -206,6 +238,14 @@ border: 1px solid #666;}
   margin: 10px;
   border-radius: 5%;
 }
+.login-container {
+  max-width: 300px;
+  margin: 50px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 form {
   display: flex;
   flex-direction: column;
@@ -227,5 +267,8 @@ form button {
   color: #fff;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
+}
+button {
   cursor: pointer;
 }
